
  [ Christoph Berg ]
  * debian/patches: features/imap_fast_trash: Support purging of messages.

  [ Antonio Radici ]
  * debian/patches:
    + upstream/578087-header-strchr.patch: prevent from segfaulting on malformed
      messages (Closes: 578087, 578583)
    + upstream/603288-split-fetches.patch: split FETCH's into smaller chunks,
      workaround for Exchange 2010 (Closes: 603288)
  * debian/extra/lib/mailto-mutt: replaced by a wrapper, added the reason to
    NEWS.Debian (Closes: 576313)

 -- Antonio Radici <antonio@dyne.org>  Sat, 01 Jan 2011 18:24:16 +0000

mutt (1.5.21-1) experimental; urgency=low

  * New upstream version (Closes: 597487)
  * debian/patches:
    + refreshed all patches
    + removed patches applied upstream
  * debian/control:
    + Standards-Version bumped to 3.9.1, no change required

 -- Antonio Radici <antonio@dyne.org>  Sun, 03 Oct 2010 22:48:50 +0100

mutt (1.5.20-10) experimental; urgency=low

  * debian/patches: features/imap_fast_trash: Make "move to trash folder" use
    IMAP COPY, by Paul Miller (jettero).

 -- Christoph Berg <myon@debian.org>  Wed, 25 Aug 2010 11:11:43 +0200

mutt (1.5.20-9) unstable; urgency=low

  * hurd-i386 fixes:
    + Use libgdbm-dev for this arch until libtokyocabinet-dev is available.
    + #define PATH_MAX _POSIX_PATH_MAX. (Fixed in upstream hg, though
      differently.)
  * /usr/bin/mutt is an alternative now, instead of a diversion in
    mutt-patched.

 -- Christoph Berg <myon@debian.org>  Sat, 12 Jun 2010 10:33:03 +0200

mutt (1.5.20-8) unstable; urgency=low

  * debian/control:
    + Flip Maintainer and Uploaders. I'm pretty inactive these days.
    + Nuke DM-Upload-Allowed.
  * Explicitely use source format 1.0 due to the quilt magic we are using to
    built mutt-patched.
  * Switch to tokyocabinet (Closes: #530670)
  * Instead of trying to maintain the PATCHES file, put "quilt applied" output
    there.
  * debian/patches: