@@ -4,7 +4,7 @@ Priority: standard
 Maintainer: Antonio Radici <antonio@dyne.org>
 Uploaders: Christoph Berg <myon@debian.org>
 Build-Depends: automake, debhelper (>> 7), docbook-xml, docbook-xsl,
- elinks-lite | elinks, gawk, gettext, libgnutls-dev,
+ w3m, gawk, gettext, libgnutls-dev,
  libgpgme11-dev, libidn11-dev, libkrb5-dev, libncurses5-dev, libncursesw5-dev,
  libsasl2-dev, pkg-config, quilt, xsltproc, zlib1g-dev,
  libtokyocabinet-dev [!hurd-i386], libgdbm-dev [hurd-i386]
