@@ -1,19 +1,19 @@
-Use elinks(1) to generate the HTML manual page
+Use w3m to build the txt manual
 
 --- a/doc/Makefile.am
 +++ b/doc/Makefile.am
-@@ -100,9 +100,7 @@ uninstall-local:
+@@ -102,9 +102,7 @@
  
  check:
  manual.txt: manual.html
--	-LC_ALL=C lynx -dump -nolist -with_backspaces manual.html > $@ || \
+-	-LC_ALL=C lynx -dump -nolist -with_backspaces -display_charset=us-ascii manual.html > $@ || \
 -	LC_ALL=C w3m -dump manual.html > $@ || \
 -	LC_ALL=C elinks -dump -no-numbering -no-references manual.html | sed -e 's,\\001, ,g' > $@
-+	LC_ALL=C elinks -dump -dump-charset utf8 -no-numbering -no-references $< > $@
++	LC_ALL=C w3m -dump -O UTF-8 manual.html > $@
  
  Muttrc: stamp-doc-rc
  
-@@ -114,10 +112,10 @@ stamp-doc-rc: $(top_srcdir)/init.h maked
+@@ -116,10 +114,10 @@
  	touch stamp-doc-rc
  
  manual.html: $(srcdir)/html.xsl $(srcdir)/mutt.xsl stamp-doc-xml $(srcdir)/mutt.css
